syntax = "proto3";

package controller.api.resources.roles.v1;

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/api/resources/roles;roles";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Role contains all fields related to a Role resource
message Role {
	// The ID of the Role
	// Output only.
	string id = 1;

	// Optional name for identification purposes
	google.protobuf.StringValue name = 2;

	// Optional user-set description for identification purposes
	google.protobuf.StringValue description = 3;

	// The time this resource was created
	// Output only.
	google.protobuf.Timestamp created_time = 4 [json_name="created_time"];

	// The time this resource was last updated.
	// Output only.
	google.protobuf.Timestamp updated_time = 5 [json_name="updated_time"];

	// Whether the resource is disabled
	google.protobuf.BoolValue disabled = 6;

	// The version can be used in subsiquent write requests to ensure this resource
	// has not changed and to fail the write if it has.
	// Output only.
	uint32 version = 7;

	// The principals that are assigned this role.
	// Output only.
	repeated string user_ids = 8;
	// Output only.
	repeated string group_ids = 9;

	// The grants that this role provides for it's principals.
	// Output only.
	repeated string grants = 10;
}
